--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,6 +42,7 @@ main {
     width: 100%;
     margin: 0;
     padding: 2em;
+    padding-top: 7vh;
     border-radius: 0;
     background: var(--background-color);
   }
@@ -68,8 +69,8 @@ article {
     color: var(--text-color);
 
     @include mobile {
-      font-size: 4vmin;
-      word-break: break-word;
+      font-size: 4.2vmin;
+      // word-break: break-word;
     }
   }
 }
@@ -109,17 +110,67 @@ figure {
   background: var(--theme-toggle);
   transition: all 0.5s ease-in-out;
   
-  @include mobile {
-    top: -$toggle-size * 1.25;
-    left: -$toggle-size * 1.25;
-    width: $toggle-size * 2.5;
-    height: $toggle-size * 2.5;
-  }
-
   @include tablet {
     top: -$toggle-size * 1;
     left: -$toggle-size * 1;
     width: $toggle-size * 2;
     height: $toggle-size * 2;
   }
+
+  @include mobile {
+    top: -$toggle-size * 1.75;
+    left: -$toggle-size * 1.75;
+    width: $toggle-size * 3.25;
+    height: $toggle-size * 3.25;
+  }
+}
+
+#switch-text-align {
+  display: none;
+
+  &:checked + .switch-text-align-label svg line:nth-of-type(1) {
+    transform-origin: 0% 50%;
+    transform: scale(0.5, 1);
+  }
+
+  &:checked + .switch-text-align-label svg line:nth-of-type(2) {
+    transform-origin: 0% 50%;
+    transform: scale(0.25, 1);
+  }
+
+  &:checked + .switch-text-align-label svg line:nth-of-type(4) {
+    transform-origin: 0% 50%;
+    transform: scale(0.75, 1);
+  }  
+  
+}
+
+.switch-text-align-label {
+  $size: 7vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.5em;
+  height: $size;
+  width: $size;
+  padding: 1vh;
+
+  @include mobile {
+    height: $size * 1;
+    width: $size * 1;
+  }
+}
+
+
+.switch-text-align {
+  height: 80%;
+  stroke: var(--align-toggle);
+  stroke-width: 20;
+  stroke-miterlimit: 10;
+  cursor: pointer;
 }
